# appcenter-rest-python

./: .gitignore  README.md  azure-pipelines.yml  inlinecss.py  pylintrc  pyproject.toml  stylecheck.sh  test.sh
.azure/: azure-pipelines.yml
.github/workflows/: codeql-analysis.yml  lint.yml
appcenter/: __init__.py  account.py  analytics.py  apps.py  constants.py  crashes.py  derived_client.py  models.py  orgs.py  orgs_teams.py  tokens.py  versions.py
tests/: test_appcenter.py
