[tool.poetry]
name = "appcenter"
version = "4.0.0"
description = "A Python wrapper around the App Center REST API."

license = "MIT"

authors = [
    "Dale Myers <dalemy@microsoft.com>"
]

readme = 'README.md'

repository = "https://github.com/Microsoft/appcenter-rest-python"
homepage = "https://github.com/Microsoft/appcenter-rest-python"

keywords = ['app center', 'api']

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Utilities'
]

[tool.poetry.dependencies]
python = "^3.8"
azure-storage-blob = "^2.1.0"
deserialize = "^2.0.1"
requests = "^2.31.0"
tenacity = "^8.2.2"
types-requests = "^2.31.0.2"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
pylint = "^2.17.5"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[[tool.mypy.overrides]]
module = [
    "deserialize",
    "azure.storage.blob"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
