[tool.poetry]
name = "appcenter"
version = "6.0.0"
description = "A Python wrapper around the App Center REST API."

license = "MIT"

authors = ["Dale Myers <dalemy@microsoft.com>"]

readme = 'README.md'

repository = "https://github.com/Microsoft/appcenter-rest-python"
homepage = "https://github.com/Microsoft/appcenter-rest-python"

keywords = ['app center', 'api']

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development',
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.11"
azure-storage-blob = "^12.13.0"
deserialize = "^2.0.1"
requests = "^2.32.0"
tenacity = "^8.2.2"
types-requests = "^2.32.0.20240602"

[tool.poetry.dev-dependencies]
black = "25.12.0"
mypy = "1.19.1"
pylint = "4.0.4"
pyright = "^1.1.390"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[[tool.mypy.overrides]]
module = ["deserialize", "azure.storage.blob"]
ignore_missing_imports = true

[tool.pyright]
include = ["appcenter", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
